[gd_scene load_steps=12 format=3 uid="uid://bg67xt5fqx2v"]

[ext_resource type="Texture2D" uid="uid://bgkd5incugf6u" path="res://assets/gun_sprites.png" id="1_esewd"]
[ext_resource type="Script" path="res://player.gd" id="1_u6bsr"]
[ext_resource type="AudioStream" uid="uid://667e2uidoyxd" path="res://assets/revolver_shot1.wav" id="2_bcsay"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tfoej"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_k4ieh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7i5vk"]
atlas = ExtResource("1_esewd")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo73o"]
atlas = ExtResource("1_esewd")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_eohu8"]
atlas = ExtResource("1_esewd")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7feg"]
atlas = ExtResource("1_esewd")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyx4p"]
atlas = ExtResource("1_esewd")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_gtbbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i5vk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo73o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eohu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7feg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyx4p")
}],
"loop": false,
"name": &"shoot",
"speed": 8.0
}]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_u6bsr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tfoej")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_k4ieh")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GunBase" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GunBase"]
position = Vector2(191, -103)
scale = Vector2(0.550781, 0.550781)
sprite_frames = SubResource("SpriteFrames_gtbbv")
animation = &"shoot"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="CrossHair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.266667)

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/DeathScreen"]
layout_mode = 0
offset_left = -106.0
offset_top = -42.0
offset_right = 138.0
offset_bottom = 72.0

[node name="Morreu" type="Label" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -40.0
offset_right = 63.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "VocÃª MORREU"

[node name="Button" type="Button" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -3.0
offset_right = 62.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart
"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bcsay")
bus = &"SFx"
